--- a/credit_risk_resampling.ipynb
+++ b/credit_risk_resampling.ipynb
@@ -1034,17 +1034,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 16,
    "metadata": {
     "tags": []
    },
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[0 1 0 ... 0 0 0]\n"
-     ]
+     "data": {
+      "text/plain": [
+       "array([0, 1, 0, ..., 0, 0, 0], dtype=int64)"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -1061,7 +1064,7 @@
     "testing_predictions = classifier_resampled.predict(X_test)\n",
     "\n",
     "# Review the predictions\n",
-    "print(testing_predictions)\n",
+    "testing_predictions\n",
     "\n"
    ]
   },
