--- a/credit_risk_resampling.ipynb
+++ b/credit_risk_resampling.ipynb
@@ -1132,7 +1132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 19,
    "metadata": {
     "tags": []
    },
@@ -1141,22 +1141,20 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "              precision    recall  f1-score   support\n",
+      "                   pre       rec       spe        f1       geo       iba       sup\n",
       "\n",
-      "Class Purple       1.00      1.00      1.00     18759\n",
-      "Class Yellow       0.87      1.00      0.93       625\n",
+      "          0       1.00      1.00      1.00      1.00      1.00      0.99     18759\n",
+      "          1       0.87      1.00      1.00      0.93      1.00      0.99       625\n",
       "\n",
-      "    accuracy                           1.00     19384\n",
-      "   macro avg       0.94      1.00      0.96     19384\n",
-      "weighted avg       1.00      1.00      1.00     19384\n",
+      "avg / total       1.00      1.00      1.00      1.00      1.00      0.99     19384\n",
       "\n"
      ]
     }
    ],
    "source": [
     "# Print the classification report for the model\n",
-    "target_names = [\"Class Purple\", \"Class Yellow\"]\n",
-    "print(classification_report(y_test, testing_predictions, target_names=target_names))"
+    "# target_names = [\"Class Purple\", \"Class Yellow\"]\n",
+    "print(classification_report_imbalanced(y_test, testing_predictions))"
    ]
   },
   {
@@ -1172,7 +1170,7 @@
    "source": [
     "**Question:** How well does the logistic regression model, fit with oversampled data, predict both the `0` (healthy loan) and `1` (high-risk loan) labels?\n",
     "\n",
-    "**Answer:** YOUR ANSWER HERE!"
+    "**Answer:** The oversampled data does a great job of predicting both \"0\" (healthy loan) and \"1\" (high-risk loan). For healthy loan the precision is 1.00 which means the model is correct 100% of the time. For high-risk loan the model is correct 87% of the time"
    ]
   }
  ],
