amended report.md

--- a/credit_risk_resampling.ipynb
+++ b/credit_risk_resampling.ipynb
@@ -1169,7 +1169,17 @@
    "source": [
     "**Question:** How well does the logistic regression model, fit with oversampled data, predict both the `0` (healthy loan) and `1` (high-risk loan) labels?\n",
     "\n",
-    "**Answer:** The oversampled data does a great job of predicting both \"0\" (healthy loan) and \"1\" (high-risk loan). For healthy loan the precision is 1.00 which means the model is correct 100% of the time. For high-risk loan the model is correct 87% of the time"
+    "**Answer:** The over sampled data does a great job of predicting both “0” (healthy loan) and “1” (high-risk loan). For healthy loan the precision is 1.00 which means the model is correct 100% of the time at predicting. Precision for '1' high-risk loans is .84, so the model predicts a loan as high-risk it is correct 84% of the time.\n",
+    "\n",
+    "The recall for healthy loans is very high at .99, meaning the model correctly identifies most of the healthy loans. Recall for '1', high-risk loans are high as well at .99 which is more important in regard to this data set to prevent loss. \n",
+    "\n",
+    "Both 0 and 1 have high specificity values of 0.99, meaning the model is good at avoiding false positives.\n",
+    "\n",
+    "Both classes have high F1-scores (0.99 for 0 and 0.91 for 1), meaning a good balance between precision and recall.\n",
+    "\n",
+    "Both classes have high geometric mean values (0.99 for both), which indicates a good overall performance.\n",
+    "\n",
+    "Both classes have high IBA values (0.99 for both), meaning a well-balanced model.\n"
    ]
   },
   {
